removed two compilation warnings, updated changelog

--- a/icmake/changelog
+++ b/icmake/changelog
@@ -39,8 +39,7 @@ icmake (8.01.00)
 
 * Updated the manpages
 
-
-
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 17 Jan 2016 14:31:41 +0100
 
 icmake (8.00.05)
 
